Fixed jumping tables

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -139,6 +139,10 @@ table{
         padding-right: 1rem !important;
     }
 
+    .hover-show-group{
+        min-width: 125px;
+    }
+
     tr .hover-show{
         height: 1.5rem;
         display: none;
